fix of description z-index

--- a/exercises/lecture-09/css/common.css
+++ b/exercises/lecture-09/css/common.css
@@ -43,9 +43,11 @@
         background: lime;
         top: 10px;
         right: 30px;
-        z-index: 1000; 
+
         /* Що потрібно додати до правила p:nth-of-type(1) , щоб змінити порядок відображення першого абзацу у стеку розташування елементів? 
-        Використати order.*/
+        Використати z-index, в даному випадку використуємо z-index: 1000.*/
+        z-index: 1000; 
+        
       }   
 }
 
